--- a/myVue/index.html
+++ b/myVue/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="static/wo.ico">
     <title>my-vue</title>
   </head>
   <body>
